--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
 .App {
   text-align: center;
+  background-color: aqua;
+  font-family: poppins;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container form{
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  width: 20%;
+  height: 200px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+button{
+  background-color: aquamarine;
+  font-family: poppins;
+  border: 1px solid blue;
+  border-radius: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  border-radius: 10px;
 }
