--- a/src/App.css
+++ b/src/App.css
@@ -57,15 +57,20 @@ overflow: hidden;
 }
 
 .how-to{
-  margin: 0 auto;
+  padding-top: 2%;
   position: fixed;
-  top: 35vh;
-  left: 10vw;
-  /* transform: translate(-50%, -50%); */
+  top: 5%;
+  left: 25%;
   background-color: white;
-  height: 300px;
-  width: 300px;
+  height: fit-content;
+  width: 50%;
   z-index: 100;
+  border-radius: 5px;
+}
+.how-to img{
+  margin: 0 auto;
+  width: 95%;
+  z-index: 101;
 }
 
 @media screen and (max-width: 769px){
@@ -86,6 +91,13 @@ overflow: hidden;
     top: 300px;
     position: absolute;
   }
+  .how-to{
+    left: 5%;
+    top: 20%;
+    width: 90%;
+    height: fit-content;
+  }
+
 }
 
 @media screen and (max-width: 1350px){
