--- a/src/App.css
+++ b/src/App.css
@@ -57,13 +57,24 @@ overflow: hidden;
 }
 
 .how-to{
-  margin-top: 200px;
+  margin-top: 50px;
 }
 .map{
+  z-index: 1;
+  bottom: 0;
+  right: 0;
+  position: absolute;
   margin: 0 auto;
-  width: 200px;
-  height: 200px;
+  min-width: 150px;
+  min-height: 150px;
+  width: 20%;
+  height:20%;
+  
 }
+.streetview{
+  height: 100vh;
+}
+
 
 
 @media screen and (max-width: 769px){
