--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-:root{
-  --yellow: rgb(225,229,30);
+:root {
+  --yellow: rgb(225, 229, 30);
 }
 .App {
   height: 100vh;
@@ -7,59 +7,58 @@
   text-align: center;
   font-family: poppins;
 }
-body{
+body {
   height: 100%;
   width: 100vh;
   background-color: var(--yellow);
 }
-.page{
+.page {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-#ny{
-margin-left: 20px;
-min-width: 320px;
-width: 769px; 
-overflow: hidden;
+#ny {
+  margin-left: 20px;
+  min-width: 320px;
+  width: 769px;
+  overflow: hidden;
 }
-.nav{
+.nav {
   margin-left: 20px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   padding: 15px;
 }
-#menu-logo{
+#menu-logo {
   max-width: 320px;
 }
-#binoc{
-
+#binoc {
   z-index: -1;
-  right:0;
+  right: 0;
   top: -100px;
   position: absolute;
 }
-.btn-group{
+.btn-group {
   margin-right: 60px;
 }
-.btn{
+.btn {
   margin-left: 12px;
   width: 152px;
   height: 52px;
   border-radius: 5px;
   font-family: poppins;
 }
-.btn:hover{
+.btn:hover {
   text-decoration: underline;
   cursor: pointer;
 }
 
-.how-to{
+.how-to {
   margin-top: 50px;
 }
-.map{
+.map {
   z-index: 1;
   bottom: 0;
   right: 0;
@@ -68,22 +67,23 @@ overflow: hidden;
   min-width: 150px;
   min-height: 150px;
   width: 20%;
-  height:20%;
-  
+  height: 20%;
+  transition: all linear .2s;
 }
-.map-active{
+.map-active {
   bottom: 0;
   right: 0;
   position: absolute;
   z-index: 1;
   width: 100vw;
   height: 80vh;
+  transition: all linear .2s;
 }
-.streetview{
+.streetview {
   height: 100vh;
 }
 
-.timer{
+.timer {
   top: 30px;
   left: 40%;
   height: 50px;
@@ -93,43 +93,69 @@ overflow: hidden;
   z-index: 2;
   background-color: var(--yellow);
 }
+/* .control {
+  margin: 10px;
+  height: 20px;
+  width: 20px;
+  background-color: red;
+} */
+.control {
+  margin: 10px;
+  background: none padding-box rgb(255, 255, 255);
+  display: block;
+  border: 0px;
+  padding: 2px 12px 2px 12px;
+  text-transform: none;
+  appearance: none;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  direction: ltr;
+  overflow: hidden;
+  text-align: left;
+  color: rgb(0, 0, 0);
+  font-family: Arial, sans-serif;
+  font-size: 25px;
+  border-radius: 2px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px -1px;
+  font-weight: 500;
+}
+.control:hover{
+  background-color: rgb(235, 235, 235);
+}
+.gm-style-mtc{
+  margin-left: 10px;
+}
 
 
-
-@media screen and (max-width: 769px){
-  #ny{
-    margin: 0 ;
-    width: 100vw; 
+@media screen and (max-width: 769px) {
+  #ny {
+    margin: 0;
+    width: 100vw;
   }
-  #binoc{
+  #binoc {
     display: none;
   }
-  #menu-logo{
+  #menu-logo {
     margin: 0 auto;
   }
-  .nav{
+  .nav {
     flex-direction: column;
   }
-  .btn-group{
+  .btn-group {
     top: 300px;
     position: absolute;
   }
-  .how-to{
+  .how-to {
     left: 5%;
     top: 20%;
     width: 90%;
     height: fit-content;
   }
-  .control{
-    height: 50px;
-    width: 50px;
-    background-color: red;
-  }
-
 }
 
-@media screen and (max-width: 1350px){
-  #binoc{
+@media screen and (max-width: 1350px) {
+  #binoc {
     width: 75%;
   }
 }
