--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,10 @@ body {
 }
 
 .timer {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  padding: 5px;
   top: 30px;
   left: 40%;
   height: 50px;
