--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,7 @@ body {
   position: absolute;
   z-index: 2;
   background-color: var(--yellow);
+  animation: fadeIn 2s;
 }
 /* .control {
   margin: 10px;
@@ -135,12 +136,27 @@ body {
 }
 .game-end{
   color: red;
+  animation: wiggle 1s infinite;
+}
+.countdown{
+  height: 100px;
+  width: 100px;
+  margin: 0 auto;
+  color: red;
   font-size: 100px;
-  animation: fadeIn .6s;
 }
 .confirm{
 
   margin-top: 95%;
+}
+
+@keyframes wiggle {
+  0% {transform: translate(1px, 1px) rotate(0deg);}
+  20% {transform: translate(-1px, 2px) rotate(-1deg);}
+  40% {transform: translate(1px, -1px) rotate(1deg);}
+  60% {transform: translate(-1px, 2px) rotate(-1deg);}
+  80% {transform: translate(1px, 2px) rotate(0deg);}
+  100% {transform: translate(1px, -2px) rotate(-1deg);}
 }
 
 @keyframes fadeIn {
