--- a/src/App.css
+++ b/src/App.css
@@ -87,14 +87,15 @@ body {
 }
 
 .timer {
+  transform: translate(-50%, -50%);
+  top: 50px;
+  left: 50%;
   justify-content: center;
   display: flex;
   align-items: center;
   padding: 5px;
-  top: 30px;
-  left: 40%;
-  height: 50px;
-  width: 20vw;
+  height: 40px;
+  width: 20%;
   min-width: 175px;
   position: absolute;
   z-index: 2;
@@ -139,15 +140,25 @@ body {
   animation: wiggle 1s infinite;
 }
 .countdown{
-  height: 100px;
-  width: 100px;
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0;
+  background-color: aqua;
+  height: 100vh;
+  width: 100vw;
   color: red;
-  font-size: 100px;
+  font-size: 200px;
 }
 .confirm{
-
-  margin-top: 95%;
+  transform: translate(-50%, -50%);
+  bottom: 5%;
+  left: 50%;
+  position: absolute;
+  background-color: rgb(81,239,13);
+}
+.help-text{
+  font-size: 20px;
 }
 
 @keyframes wiggle {
