--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,13 @@ body {
 .help-text{
   font-size: 20px;
 }
+.game-over{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 @keyframes wiggle {
   0% {transform: translate(1px, 1px) rotate(0deg);}
