--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,8 @@ body {
   position:absolute;
   background-color: rgba(51, 46, 46, 0.7);
   z-index: 2;
-  mask-image: radial-gradient(circle closest-side at 50% 55vh, transparent 45%, white 50%);
+  mask-image: radial-gradient(circle closest-side at 50% 65vh, transparent 45%, white 50%);
+  mask-size: 100%;
   /* mask-image: radial-gradient(red,green, blue); */
 }
 .marker{
@@ -228,16 +229,9 @@ body {
 }
 
 @keyframes fadeIn {
-  0% {opacity: 0;}.overlay{
-    overflow: hidden;
-    height: 100vh;
-    width: 100vw;
-    position:absolute;
-    background-color: rgba(51, 46, 46, 0.7);
-    z-index: 2;
+  0% {opacity: 0;}
   100% {opacity: 1;}
   
-}
 }
 
 @media screen and (max-width: 769px) {
