--- a/src/pages/LeaderBoard/LeaderBoard.css
+++ b/src/pages/LeaderBoard/LeaderBoard.css
@@ -30,7 +30,7 @@
     display: flex;
     justify-content: space-between;
 }
-.nav{
+.leaderboard-nav{
     display: flex;
     justify-content: space-between;
 }
