looks good for now

--- a/src/pages/LeaderBoard/LeaderBoard.css
+++ b/src/pages/LeaderBoard/LeaderBoard.css
@@ -34,7 +34,7 @@
     justify-content: space-between;
     width: 100vw;
 }
-.page{
+.leaderboard-page{
     padding: 10px;
     height: fit-content;
 }
